<resources>
    <string name="app_name">NEWS APP</string>
    <string name="app_title">Ứng Dụng Tin Tức RSS</string>
    <string name="bao_tuoi_tre">Báo Tuổi Trẻ</string>
    <string name="bao_moi">Báo Mới</string>
    <string name="bao_thanh_nien">Báo Thanh Niên</string>
    <string name="bao_dan_tri">Báo Dân Trí</string>
    <string name="bao_vn_express">Báo VNExpress</string>
    <string name="bao_coming_soon">Coming Soon</string>
    <string name="button_back">Back</string>
    <string name="todo">TODO</string>
    <string name="bao_24h">24 Giờ</string>
</resources>
